# Real-Time-E-Commerce-Analytics-Platform

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: ecommerce_pipeline.py
api/: main.py
dashboards/grafana/provisioning/dashboards/: dashboard.yml
dashboards/grafana/provisioning/datasources/: datasource.yml
jobs/: load_gold_to_warehouse.py
quality/: validate_gold.py
spark/: stream_processor.py
streaming/: producer.py
tests/: test_api_contract.py
warehouse/sql/: star_schema.sql
